<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sin"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_sin"
            android:padding="0dp"
            android:text="sin"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonText" />

        <Button
            android:id="@+id/button_cos"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_cos"
            android:padding="0dp"
            android:text="cos"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_tan"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_tan"
            android:padding="0dp"
            android:text="tan"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_del"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_del"
            android:padding="0dp"
            android:text="@string/delete_numbers"
            android:textColor="@color/Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/button_bin"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_bin"
            android:padding="0dp"
            android:text="bin"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_dec"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_dec"
            android:padding="0dp"
            android:text="dec"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_hex"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_hex"
            android:padding="0dp"
            android:text="hex"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_oct"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_oct"
            android:padding="0dp"
            android:text="oct"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_squared_2"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_squared_2"
            android:padding="0dp"
            android:text="@string/squared_two"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_qube"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_qube"
            android:padding="0dp"
            android:text="@string/qube"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_root"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_root"
            android:padding="0dp"
            android:text="@string/square_root_symbol"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_pi"

            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:clickable="true"
            android:onClick="onClickListener_pi"
            android:padding="0dp"
            android:text="@string/pi"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener7"
            android:text="7"
            android:textColor="@color/Black"
            style="@style/ButtonText" />

        <Button
            android:id="@+id/button8"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener8"
            android:text="8"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button9"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener9"
            android:text="9"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonDivide"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerDivide"
            android:text="/"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener4"
            android:text="4"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button5"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener5"
            android:text="5"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button6"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener6"
            android:text="6"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonMultiply"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerMultiply"
            android:text="*"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener1"
            android:text="1"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button2"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener2"
            android:text="2"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/button3"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener3"
            android:text="3"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonMinus"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerMinus"
            android:text="-"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListener0"
            android:text="0"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonPoint"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerPoint"
            android:text="."
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonEqual"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerEqual"
            android:text="="
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/buttonPlus"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:onClick="onClickListenerPlus"
            android:text="+"
            android:textColor="@color/Black"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonExit"

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:onClick="onClickListenerExit"
            android:paddingTop="15dp"
            android:text="Exit"
            android:textColor="@color/RoyalBlue"
            android:textSize="15dp" />

        <Button
            android:id="@+id/buttonReset"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:onClick="onClickListenerReset"
            android:text="Reset"
            android:textColor="@color/RoyalBlue" />
    </LinearLayout>


</LinearLayout>
